@@ -1,6 +1,8 @@
 ubiquity (1.1.13) UNRELEASED; urgency=low
 
   * Rename configure.in to configure.ac.
+  * Drop backward compatibility for base-config/language-packs preseeding
+    from Breezy.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon,  4 Sep 2006 23:12:42 +0100
 
